--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "nodemon": "^2.0.15",
     "socket.io": "^4.1.2"
   }
 }
